cmake_minimum_required(VERSION 3.8)
project(octomap_path_planner)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

find_package(ament_cmake REQUIRED)
find_package(rclcpp REQUIRED)
find_package(nav_msgs REQUIRED)
find_package(geometry_msgs REQUIRED)
find_package(sensor_msgs REQUIRED)
find_package(tf2 REQUIRED)
find_package(tf2_ros REQUIRED)
find_package(tf2_geometry_msgs REQUIRED)
find_package(octomap REQUIRED)
find_package(octomap_msgs REQUIRED)
find_package(octomap_ros REQUIRED)
find_package(mavros_msgs REQUIRED)
find_package(std_msgs REQUIRED)
find_package(std_srvs REQUIRED)
find_package(PCL REQUIRED)
find_package(pcl_conversions REQUIRED)

add_executable(dwa_node src/dwa_node.cpp)
ament_target_dependencies(dwa_node
  rclcpp
  nav_msgs
  geometry_msgs
  octomap_msgs
  octomap
  tf2_geometry_msgs
  tf2_ros
  octomap_ros
)

add_executable(global_planner_node src/global_planner_node.cpp)
ament_target_dependencies(global_planner_node
  rclcpp
  nav_msgs
  geometry_msgs
  octomap_msgs
  octomap
)

add_executable(octomap_node src/octomap_node.cpp)
ament_target_dependencies(octomap_node
  rclcpp
  sensor_msgs
  octomap_msgs
  octomap
  octomap_ros
  tf2_ros
  tf2_geometry_msgs
)

add_executable(px4_interface_node src/px4_interface_node.cpp)
ament_target_dependencies(px4_interface_node
  rclcpp
  mavros_msgs
  geometry_msgs
)

add_executable(ply_publisher_node src/ply_publisher_node.cpp)
ament_target_dependencies(ply_publisher_node
  rclcpp
  sensor_msgs
  pcl_conversions
)
target_link_libraries(ply_publisher_node
  ${PCL_LIBRARIES}
)

install(TARGETS
  octomap_node
  global_planner_node
  dwa_node
  px4_interface_node
  ply_publisher_node
  DESTINATION lib/${PROJECT_NAME}
)

install(
    DIRECTORY launch
    DESTINATION share/${PROJECT_NAME}
)

ament_package()